tests/neg/lexer_unclosed_string.baa
// RUN: expect-fail
// EXPECT: النص غير مُغلق

صحيح الرئيسية() {
    نص س = "مرحبا.
    إرجع ٠.
}
